--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,12 @@ version = "1.0"
 description = "Get up and running with Latex!"
 authors = ["Dustin Enyeart"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
-sphinx = "^8.0"
+sphinx = "^7.0"
+sphinx-rtd-theme = "^1.0"
 
 [build-system]
 requires = ["poetry-core"]
