--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,6 +15,11 @@ build:
     # rust: "1.64"
     # golang: "1.19"
 
+python: 
+  install: 
+    - method: poetry 
+      path: .
+
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
   configuration: docs/source/conf.py
